Step 1 of getting GS to work
- GS connects on the main menu
- some misc files and functions already added that will be needed in the future

--- a/Languages/en.ini
+++ b/Languages/en.ini
@@ -382,6 +382,9 @@ HeaderText=MenuTimer Options
 [ScreenUSBProfileOptions]
 HeaderText=USB Profile Options
 
+[ScreenGrooveStatsOptions]
+HeaderText=GrooveStats Options
+
 [ScreenAcknowledgmentsMenu]
 HeaderText=Acknowledgments
 
@@ -548,6 +551,7 @@ Set BG Fit Mode=Set Background Fit
 Input Options=Input Options
 Acknowledgments=Simply Love Acknowledgments
 Clear Credits=Clear Credits
+GrooveStatsOptions=GrooveStats Options
 
 # System Options
 Editor Noteskin=Editor Noteskin
@@ -701,6 +705,10 @@ ScreenAfterPlayerOptions4=Next Screen
 Yes=Yes
 No=No
 
+# GrooveStats Options
+EnableGrooveStats=Enable GrooveStats
+AutoDownloadUnlocks=Auto-Download Unlocks
+SeparateUnlocksByPlayer=Separate Unlocks By Player
 
 ##############################################
 # now we get into the longer explanations of options
@@ -720,6 +728,7 @@ USB Profile Options=Adjust settings related to USB Profiles, including loading c
 MenuTimer Options=Turn the MenuTimer On or Off and set the MenuTimer values for various screens.
 Acknowledgments=This theme would not exist without Simply Love, so these credits are left in.
 Clear Credits=Reset coin credits to 0.
+GrooveStatsOptions=Manage GrooveStats settings.
 
 
 # System Options
@@ -837,6 +846,11 @@ AllowSongDeletion=Allow players to permanently delete songs from the computer by
 StepMania Credits=Celebrate those who made StepMania possible.
 SimplyLoveCredits=Celebrate the team behind the Simply Love theme.
 RabbitHole=Alice was beginning to get very tired of sitting by her sister on the bank and of having nothing to do.
+
+# GrooveStats Options
+EnableGrooveStats=Establish a connection to GrooveStats.
+AutoDownloadUnlocks=Auto-Download Unlocks for Online Events.\n\nNote: Unzipping the unlock can cause the game to stutter.
+SeparateUnlocksByPlayer=Separate Downloaded Unlocks for Each Profile.
 
 # ScreenPlayerOptions
 SpeedModType=Change the way arrows react to changing BPMs.
