add option to always show GS scores, even in WF

--- a/Languages/en.ini
+++ b/Languages/en.ini
@@ -594,6 +594,7 @@ PreferredSecondGraph=Preferred Secondary Graph
 PreferredGameEnv=Preferred Gameplay Mode
 PreferredFaultWindow=Preferred Fault Window
 GSOverride=Override Rate Mods w/ GS
+AlwaysGS=Always show GS scores
 
 # MenuTimer Options
 ScreenSelectMusicMenuTimer=Select Music
@@ -814,6 +815,7 @@ PreferredSecondGraph=Choose which graph to show below the secondary pane at Eval
 PreferredGameEnv=Choose which game environment to load into upon starting a set. Note that you can still change environments mid-set, and changing it during a set will not change this preference.
 PreferredFaultWindow=Choose which fault window to use. Enabled is standard Waterfall fault window, Disabled is fault window off, and Extended simulates ITG decent/way off window
 GSOverride=Enable this if you always want to see the GrooveStats records instead of local records at the song select screen when in ITG mode, regardless of the current rate mod. This theme separates scores by rate mod but GS does not, so you may prefer one or the other.
+AlwaysGS=Shows GrooveStats scores, even when using the Waterfall gamemode.
 
 # USB MemoryCard Options
 MemoryCards=Allow players to save preferences and personal high scores to USB drives.\n\nNote that you must configure your computer's OS (outside of StepMania) to mount USB drives a specific way first for this to work.\n\nConsult the Wiki on StepMania's GitHub for detailed instructions about this.\n\ngithub.com/stepmania/stepmania/wiki
