add practice mode and syncbias option

--- a/Languages/en.ini
+++ b/Languages/en.ini
@@ -179,6 +179,10 @@ FeelingSalty=Pad moment?
 TestInput=Test Input
 TestInputHelpText=Press &START; to return to selecting a song.
 
+# Practice mode
+HardTime=Having a hard time?
+PracticeMode=Practice Mode
+
 ECFA2021=Event Exclusive
 ViewECFAScores=View ECFA Scores
 
@@ -295,7 +299,7 @@ itlOverlayHelpText=Press &START; to dismiss.
 rpgOverlayHelpText=Press &START; to dismiss.
 
 [GraphDisplay]
-Barely=Barely!
+Barely=HOLY FUCK!
 
 ##############################################
 # PlayAgain only appears if Continue System is enabled and EventMode is off
@@ -418,6 +422,23 @@ RecordModeHelpText=Control + R: Start Record Mode\nQ/W: Change record hold time.
 KeyMappingHelpText=F1: Keymappings Help
 MiscHelpText=Space bar: Set area marker\nT: Toggle Song/Steps Timing
 
+[ScreenPractice]
+PlayRecordHelpText=
+EditHelpText=
+
+Main title=Song Title
+
+# Help Section Headers
+NavigationHelpLabel=Navigating
+MenuHelpLabel=Available Menus
+KeyMappingHelpLabel=KeyMappings
+MiscHelpLabel=Misc.
+
+# Explanations
+NavigationHelpText=Up/Down:\n     Move One Measure\nSemicolon/Apostrophe:\n     Move One Measure\nHome/End:\n    Move to Start/End of Steps
+MenuHelpText=Escape\Enter: Main Menu
+KeyMappingHelpText=F1: Keymappings Help
+MiscHelpText=Space: Set area marker
 
 [ScreenAttackMenu]
 HeaderText=Script Attack Modifiers
