get rid of cringe intro text

--- a/Languages/en.ini
+++ b/Languages/en.ini
@@ -8,7 +8,7 @@ PopupDismissText=Press &START; to dismiss.
 # roughly in the order they are encountered
 
 [ScreenInit]
-ThemeDesign=suki baby desu wa XD !!!
+ThemeDesign=Project Waterfall
 # UnsupportedGame is a SystemMessage displayed at startup if SM5 is in kickbox, beat, lights, etc. game
 UnsupportedGame=%s is not a playable game in this theme.\nPlease choose a different game.
 UnsupportedSMVersion=StepMania %s is not supported by this theme.\nPlease choose a different theme or use SM5.1-beta or SM5.0.12.
