--- a/Languages/en.ini
+++ b/Languages/en.ini
@@ -415,7 +415,7 @@ KeyMappingHelpLabel=KeyMappings
 MiscHelpLabel=Misc.
 
 # Explanations
-NavigationHelpText=Up/Down:\n     Move One Beat\nSemicolon/Apostrophe:\n     Move One Measure\nHome/End:\n    Move to Start/End of Steps
+NavigationHelpText=Comma/Period:\n     Move To Next/Previous Arrow\nUp/Down:\n     Move One Measure\nSemicolon/Apostrophe:\n     Move One Measure\nHome/End:\n    Move to Start/End of Steps
 NoteWritingHelpText=Number Keys:\n     Create/Remove Note\nLeft/Right:\n     Change Note Snap\nNumber + Up/Down:\n    Create Hold Note\nShift + Number + Up/Down\n    Create Roll Note\nN/M: Toggle Note Types
 MenuHelpText=Escape: Main Menu\nEnter: Area Menu\nA: Alter Menu\nF4: Timing Menu
 RecordModeHelpText=Control + R: Start Record Mode\nQ/W: Change record hold time.\nE/R: Toggle record holds
