--- a/Languages/en.ini
+++ b/Languages/en.ini
@@ -579,6 +579,7 @@ EditorNoteSkin=Editor Noteskin
 # Graphics/Sound Options
 VideoRenderer=Video Renderer
 GlobalOffsetSeconds=Global Offset
+PreferredSampleRate=Audio Sample Rate
 
 # Arcade Options
 AllowMultipleHighScoreWithSameName=Multiple High Scores\nWith Same Name
@@ -599,7 +600,7 @@ AllowScreenNameEntry=Allow Screen\nName Entry
 AllowScreenGameOver=Allow Screen\nGame Over
 MusicWheelStyle=MusicWheel Style
 AllowDanceSolo=Allow Dance Solo
-HideStockNoteSkins=Stock NoteSkins
+HideStockNoteSkins=Stock NoteSkins@
 ShowGradesInMusicWheel=Show Grades\nIn MusicWheel
 CasualMaxMeter=Max Difficulty\nIn Casual Mode
 UseImageCache=Use ImageCache
@@ -779,7 +780,7 @@ ShowStats=Display performance statistics in the upper right corner of the screen
 GlobalOffsetSeconds=Set the audio offset in milliseconds.\n\nNegative values cause the audio to be played earlier (late arrows), positive values cause audio playback to be late (early arrows).
 VisualDelaySeconds=Subtract or add this many milliseconds of visual delay to gameplay.\n\nNegative values can be used to compensate for an LCD TV with a lot of "lag" or latency.
 AttractSoundFrequency=Set to 'Always' to play sounds every time during StepMania's attract sequence.\n\nSet to '2 Times' to play sounds every other attract sequence.\n\nSet to 'Never' if you are an arcade attendent slowly losing your sanity to the unending noise engulfing you.\n\nSimply Love does not have any attract sequence sounds, but this setting may impact other themes.
-
+PreferredSampleRate=Set the audio output rate.\n\nDEFAULT currently uses 44100 Hz.\n\nMatching the system native rate may help prevent sync issues and drift.\n\nA restart is required for changes to take full effect.
 
 # Appearance Options
 ShowLyrics=Toggle the display of song lyrics during gameplay if they are available.\n\nLyrics can be provided on a per-song basis by using a .lrc file.
